@@ -10,6 +10,7 @@ Vaclav Slavik <vaclav.slavik@matfyz.cz>
 
 Artur Frysiak <wiget@users.sourceforge.net>
 Stefan Neis <Stefan.Neis@t-online.de>
+Wlodzimierz ABX Skiba <abx@abx.art.pl>
 
 
  Reused code:
