@@ -1,0 +1,110 @@
+<?xml version="1.0" ?>
+<!-- $Id$ -->
+
+<makefile>
+
+    <!-- the value in win32.bkl is too high for DMC: -->
+    <set var="LIB_PAGESIZE" overwrite="0">512</set>
+    
+    <include file="win32.bkl"/>
+    
+    <set var="__DEFINE_ARG">-D</set>
+    <set var="__INCLUDE_ARG">-I</set>
+    <set var="__LIB_ARG">%s.lib</set>
+
+    <set var="__DEFAULT_CC">dmc</set>
+    <set var="__DEFAULT_CXX">dmc</set>
+    <set var="__DEFAULT_CFLAGS"></set>
+    <set var="__DEFAULT_CPPFLAGS"></set>
+    <set var="__DEFAULT_CXXFLAGS"></set>
+    <set var="__DEFAULT_LDFLAGS"></set>
+    
+    <set var="__LINKER">link /NOLOGO /SILENT /NOI /DELEXECUTABLE</set>
+    <set var="__LINKER_CC">$(__LINKER) /EXETYPE:NT</set>
+    <set var="__LINKER_CXX">$(__LINKER) /EXETYPE:NT</set>
+    <set var="__DLL_LINKER_CC">$(__LINKER)</set>
+    <set var="__DLL_LINKER_CXX">$(__LINKER)</set>
+    <set var="__MODULE_LINKER_CC">$(__DLL_LINKER_CC)</set>
+    <set var="__MODULE_LINKER_CXX">$(__DLL_LINKER_CXX)</set>
+
+    <!-- basic compiler/linker flags: -->
+    <set var="__FLAG_EXE_CONSOLE"></set>
+    <set var="__FLAG_EXE_GUI">/su:windows</set>
+    <set var="__FLAG_DEBUG_ON">-g</set>
+    <set var="__FLAG_DEBUG_ON_LINKER">/DEBUG /CODEVIEW</set>
+    <set var="__FLAG_DEBUG_OFF"></set>
+    <set var="__FLAG_DEBUG_OFF_LINKER"></set>
+    <set var="__FLAG_OPTIMIZE_OFF">-o+none</set>
+    <set var="__FLAG_OPTIMIZE_SIZE">-o+space</set>
+    <set var="__FLAG_OPTIMIZE_SPEED">-o</set>
+    <set var="__FLAG_ARCH_I386">-3</set>
+    <set var="__FLAG_ARCH_I486">-4</set>
+    <set var="__FLAG_ARCH_I586">-5</set>
+    <set var="__FLAG_ARCH_I686">-6</set>
+    <set var="__FLAG_SINGLE_THREADING"/>
+    <set var="__FLAG_MULTI_THREADING"/>
+    <set var="__FLAG_WARNINGS_NO">-w</set>
+    <set var="__FLAG_WARNINGS_DEFAULT"/>
+    <set var="__FLAG_WARNINGS_MAX">-w-</set>
+    
+    <set var="__FLAG_RTTI_ON">-Ar</set>
+    <set var="__FLAG_RTTI_OFF"></set>
+    <set var="__FLAG_EXCEPTIONS_ON">-Ae</set>    
+    <set var="__FLAG_EXCEPTIONS_OFF"></set>
+
+    <!-- rules building blocks: -->
+    
+    <template id="__commands_templ_C">
+        <set var="__COMPILE_C_CMD" eval="0">
+            $(CC) -mn -c -o$@ $(__cflags) $**
+        </set>
+    </template>
+    
+    <template id="__commands_templ_CXX">
+        <set var="__COMPILE_CXX_CMD" eval="0">
+            $(CXX) -mn -c -o$@ $(__cxxflags) $**
+        </set>
+    </template>
+
+    <define-tag name="runtime-libs" rules="exe,dll,module,lib">
+        <cppflags>
+            $(substituteFromDict(value, {'static':'', 'dynamic':'-ND'}))
+        </cppflags>
+    </define-tag>
+    
+    <define-tag name="app-type" rules="exe">
+        <cppflags>
+            $(substituteFromDict(value, {'console':'', 'gui':'-WA'}))
+        </cppflags>
+    </define-tag>
+    
+    <define-tag name="lib-path" rules="exe,dll,module">
+        <set var="__ldlibs" append="1">$(nativePaths(value))\</set>
+    </define-tag>
+
+    <set var="__dll_baser">__dmars_dll</set>
+    <define-rule name="__dmars_dll">
+        <template>
+            <cppflags>-WD</cppflags>
+            <sys-lib>kernel32</sys-lib>
+        </template>
+    </define-rule>
+    
+    <template id="__commands_templ">
+        <set var="__win32res"/>
+        <set var="__mapfile" eval="0">$(__targetdir)$(__name).map</set>
+        <set var="__LINK_EXE_CMD" eval="0">
+            $(__linker) $(__ldflags) $(__objects_var),$@,$(__mapfile),$(__ldlibs),,$(__win32res)
+        </set>
+        <set var="__LINK_LIB_CMD" eval="0">
+            lib -p$(LIB_PAGESIZE) -c -n $@ $(__objects_var)
+        </set>
+        <set var="__LINK_DLL_CMD" eval="0">
+            $(__dll_linker) $(__ldflags) /IMPLIB:$(__targetdir)$(__libname).lib $(__objects_var),$@,$(__mapfile),$(__ldlibs),,$(__win32res)
+        </set>
+        <set var="__LINK_MODULE_CMD" eval="0">
+            $(__module_linker) $(__ldflags) $(__objects_var),$@,$(__mapfile),$(__ldlibs),,$(__win32res)
+        </set>
+    </template>
+    
+</makefile>
